--- a/microservice-ms/proxy-balancer/pom.xml
+++ b/microservice-ms/proxy-balancer/pom.xml
@@ -3,13 +3,13 @@
 	xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
 	<modelVersion>4.0.0</modelVersion>
 	<parent>
-		<artifactId>ms</artifactId>
-		<groupId>it.sincositalia.ms</groupId>
+		<groupId>it.marcoberri.ms</groupId>
 		<version>0.0.1-SNAPSHOT</version>
+		<artifactId>main</artifactId>
 	</parent>
 	
 	
-	<groupId>it.sincositalia.ms</groupId>
+	<groupId>it.marcoberri.ms</groupId>
 	<artifactId>proxy-balancer</artifactId>
 	<version>0.0.1-SNAPSHOT</version>
 	<packaging>jar</packaging>
