--- a/microservice-ms/eureka/pom.xml
+++ b/microservice-ms/eureka/pom.xml
@@ -6,8 +6,8 @@
 
 
 	<parent>
-		<groupId>it.sincositalia.ms</groupId>
-		<artifactId>ms</artifactId>
+		<groupId>it.marcoberri.ms</groupId>
+		<artifactId>main</artifactId>
 		<version>0.0.1-SNAPSHOT</version>
 	</parent>
 
