--- a/microservice-ms/pom.xml
+++ b/microservice-ms/pom.xml
@@ -1,5 +1,6 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
+<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
+	xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
 	<modelVersion>4.0.0</modelVersion>
 
 
@@ -9,8 +10,8 @@
 		<version>Brixton.RELEASE</version>
 	</parent>
 
-	<groupId>it.sincositalia.ms</groupId>
-	<artifactId>ms</artifactId>
+	<groupId>it.marcoberri.ms</groupId>
+	<artifactId>main</artifactId>
 	<version>0.0.1-SNAPSHOT</version>
 	<packaging>pom</packaging>
 
@@ -60,10 +61,10 @@
 
 	<modules>
 		<module>eureka</module>
-		<module>service-login</module>
 		<module>service-common</module>
-    <module>proxy-balancer</module>
-  </modules>
+		<module>service-login</module>
+		<module>proxy-balancer</module>
+	</modules>
 
 
 </project>
