--- a/microservice-ms/service-login/pom.xml
+++ b/microservice-ms/service-login/pom.xml
@@ -1,40 +1,32 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
 	xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
-	
-  <modelVersion>4.0.0</modelVersion>
 
-  <parent>
-    <groupId>it.sincositalia.ms</groupId>
-    <artifactId>ms</artifactId>
-    <version>0.0.1-SNAPSHOT</version>
-  </parent>
+	<modelVersion>4.0.0</modelVersion>
 
-  <artifactId>service-login</artifactId>
-  <name>service-login</name>
-  <url>http://maven.apache.org</url>
-  
-  <properties>
-    <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
-  </properties>
-  
-  
-  <dependencies>
-  
- 		<dependency>
-			<!-- Setup Spring Boot -->
-			<groupId>org.springframework.boot</groupId>
-			<artifactId>spring-boot-starter</artifactId>		
+	<parent>
+		<groupId>it.marcoberri.ms</groupId>
+		<version>0.0.1-SNAPSHOT</version>
+		<artifactId>main</artifactId>
+	</parent>
+
+	<artifactId>service-login</artifactId>
+	<name>service-login</name>
+	<url>http://maven.apache.org</url>
+
+
+	<dependencies>
+
+
+<!-- 		<dependency>
+			<groupId>it.marcoberri.ms</groupId>
+			<artifactId>service-common</artifactId>
+			<version>${project.version}</version>
+			<scope>compile</scope>
 		</dependency>
+ -->
 
 		<dependency>
-			<!-- Setup Spring Boot -->
-			<groupId>org.springframework.boot</groupId>
-			<artifactId>spring-boot-starter-actuator</artifactId>		
-		</dependency>
-
-		<dependency>
-			<!-- Setup Spring MVC & REST, use Embedded Tomcat -->
 			<groupId>org.springframework.boot</groupId>
 			<artifactId>spring-boot-starter-web</artifactId>
 		</dependency>
@@ -45,31 +37,13 @@
 			<groupId>org.springframework.cloud</groupId>
 			<artifactId>spring-cloud-starter-eureka-server</artifactId>
 		</dependency>
+		
 
 
-		<dependency>
-			<!-- Eureka service registration -->
-			<groupId>org.springframework.cloud</groupId>
-			<artifactId>spring-cloud-starter-feign</artifactId>
-		</dependency>
-
-
-<!-- 
-		<dependency>
-			Setup Spring Data common components
-			<groupId>org.springframework.data</groupId>
-			<artifactId>spring-data-commons</artifactId>
-		</dependency>
-
-
-		<dependency>
-			Setup Spring Data JPA Repository support
-			<groupId>org.springframework.boot</groupId>
-			<artifactId>spring-boot-starter-data-jpa</artifactId>
-		</dependency>
- -->
-
-  </dependencies>
+		<!-- <dependency> <groupId>org.springframework.data</groupId> <artifactId>spring-data-commons</artifactId> 
+			</dependency> <dependency> <groupId>org.springframework.boot</groupId> <artifactId>spring-boot-starter-data-jpa</artifactId> 
+			</dependency> -->
+	</dependencies>
 
 
 </project>
