commit fix and batch

--- a/microservice-ms/eureka/pom.xml
+++ b/microservice-ms/eureka/pom.xml
@@ -1,7 +1,7 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
 	xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
-	
+
 	<modelVersion>4.0.0</modelVersion>
 
 
@@ -13,6 +13,35 @@
 
 	<artifactId>eureka</artifactId>
 	<name>eureka</name>
+
+
+
+	<build>
+
+		<plugins>
+			<plugin>
+				<groupId>org.apache.maven.plugins</groupId>
+				<artifactId>maven-compiler-plugin</artifactId>
+
+				<configuration>
+					<source>1.8</source>
+					<target>1.8</target>
+				</configuration>
+			</plugin>
+
+			<plugin>
+				<groupId>org.springframework.boot</groupId>
+				<artifactId>spring-boot-maven-plugin</artifactId>
+				<configuration>
+					<mainClass>it.marcoberri.ms.eureka.RegistrationServer</mainClass>
+					<layout>JAR</layout>
+				</configuration>
+			</plugin>
+
+
+		</plugins>
+	</build>
+
 
 	<dependencies>
 
@@ -60,11 +89,4 @@
 		</dependency>
 
 	</dependencies>
-
-
-
-	<url>http://maven.apache.org</url>
-	<properties>
-		<project.build.sourceEncoding>UTF8</project.build.sourceEncoding>
-	</properties>
 </project>
