--- a/microservice-ms/pom.xml
+++ b/microservice-ms/pom.xml
@@ -34,6 +34,11 @@
 			<scope>test</scope>
 		</dependency>
 
+		<dependency>
+			<groupId>org.springframework.boot</groupId>
+			<artifactId>spring-boot-starter-log4j2</artifactId>
+		</dependency>
+
 	</dependencies>
 
 
@@ -61,7 +66,6 @@
 
 	<modules>
 		<module>eureka</module>
-		<module>service-common</module>
 		<module>service-login</module>
 		<module>proxy-balancer</module>
 	</modules>
