last test and add services
add another service and first test with jmeter

--- a/microservice-ms/service-user/src/main/resources/service-user.yml
+++ b/microservice-ms/service-user/src/main/resources/service-user.yml
@@ -72,8 +72,8 @@ endpoints:
 
 logging:
   level:
-    ROOT: DEBUG
-    org.springframework.web: DEBUG
+    ROOT: ERROR
+    org.springframework.web: ERROR
   file: /log/${spring.application.name}.log
 
 ---
