testing and configuration
test with jmeter and configuration from single server

--- a/microservice-ms/service-authentication/pom.xml
+++ b/microservice-ms/service-authentication/pom.xml
@@ -11,7 +11,7 @@
 
 	<artifactId>service-authentication</artifactId>
 	<name>service-authentication</name>
-	<url>http://maven.apache.org</url>
+	<url>http://tecnicume.blogspot.com</url>
 	<dependencies>
 
 
