--- a/microservice-ms/service-message/pom.xml
+++ b/microservice-ms/service-message/pom.xml
@@ -10,7 +10,7 @@
 	</parent>
 	<artifactId>service-message</artifactId>
 	<name>service-user</name>
-	<url>http://maven.apache.org</url>
+	<url>http://tecnicume.blogspot.com</url>
 	<dependencies>
 
 
