--- a/microservice-ms/parent/pom.xml
+++ b/microservice-ms/parent/pom.xml
@@ -16,7 +16,7 @@
 	<packaging>pom</packaging>
 
 	<name>ms-parent</name>
-	<url>http://maven.apache.org</url>
+	<url>http://tecnicume.blogspot.com</url>
 
 	<properties>
 		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
@@ -35,8 +35,6 @@
 					<target>1.8</target>
 				</configuration>
 			</plugin>
-
-
 
 
 		</plugins>
