--- a/microservice-ms/pom.xml
+++ b/microservice-ms/pom.xml
@@ -8,7 +8,7 @@
 	<packaging>pom</packaging>
 
 	<name>ms</name>
-	<url>http://maven.apache.org</url>
+	<url>http://tecnicume.blogspot.com</url>
 
 	<properties>
 		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
