--- a/microservice-ms/service-authentication/src/main/resources/service-auth.yml
+++ b/microservice-ms/service-authentication/src/main/resources/service-auth.yml
@@ -4,7 +4,7 @@ info:
 # Spring properties
 spring:
   application:
-     name: service-auth  # Service registers under this name
+     name: service-auth 
   freemarker:
     enabled: false           
   datasource:
@@ -38,24 +38,36 @@ logging:
 
 # HTTP Server
 server:
-  port: 2200   # HTTP (Tomcat) port
+  port: 2200  
   compression:
     enabled: true  
 
 
 #  port: ${random.int(2000,2010)}   # HTTP (Tomcat) port
 
-# Discovery Server Access
-#  1. DEV ONLY: Reduce the lease renewal interval to speed up registration
-#  2. Define URL of registration server (defaultZone)
 eureka:
   instance:
     hostname: localhost
     port: 1111
-    leaseRenewalIntervalInSeconds: 5   # DO NOT DO THIS IN PRODUCTION
+    metadataMap:
+      instanceId: ${spring.application.name}:${spring.application.instance_id:${random.value}}
+    preferIpAddress: true
+    leaseRenewalIntervalInSeconds: 5
+    lease-expiration-duration-in-seconds: 5
   client:
+    fetchRegistry: true
+    registryFetchIntervalSeconds: 5
     serviceUrl:
       defaultZone: http://${eureka.instance.hostname}:${eureka.instance.port}/eureka/
+      
+#eureka:
+#  instance:
+#    hostname: localhost
+#    port: 1111
+    #leaseRenewalIntervalInSeconds: 5 
+ # client:
+ #   serviceUrl:
+  #    defaultZone: http://${eureka.instance.hostname}:${eureka.instance.port}/eureka/
           
 security:
   user:  none
