--- a/microservice-ms/service-user/pom.xml
+++ b/microservice-ms/service-user/pom.xml
@@ -10,7 +10,7 @@
 	</parent>
 	<artifactId>service-user</artifactId>
 	<name>service-user</name>
-	<url>http://maven.apache.org</url>
+	<url>http://tecnicume.blogspot.com</url>
 	<dependencies>
 
 
@@ -33,19 +33,19 @@
 			<!-- Setup Spring MVC & REST, use Embedded Tomcat -->
 			<groupId>org.springframework.boot</groupId>
 			<artifactId>spring-boot-starter-web</artifactId>
-			<!--  exclusions>
+			<exclusions>
 				<exclusion>
 					<groupId>org.springframework.boot</groupId>
 					<artifactId>spring-boot-starter-tomcat</artifactId>
 				</exclusion>
-			</exclusions-->
+			</exclusions>
 		</dependency>
 
 
-		<!--  dependency>
+		<dependency>
 			<groupId>org.springframework.boot</groupId>
 			<artifactId>spring-boot-starter-undertow</artifactId>
-		</dependency-->
+		</dependency>
 
 		<dependency>
 			<groupId>org.springframework.boot</groupId>
@@ -88,14 +88,12 @@
 			<plugin>
 				<groupId>org.springframework.boot</groupId>
 				<artifactId>spring-boot-maven-plugin</artifactId>
-				<executions>
-					<execution>
-						<goals>
-							<goal>repackage</goal>
-						</goals>
-					</execution>
-				</executions>
+				<configuration>
+					<mainClass>it.marcoberri.ms.service.user.ServiceUser</mainClass>
+					<layout>JAR</layout>
+				</configuration>
 			</plugin>
+
 		</plugins>
 	</build>
 </project>
