update configuration and stress test
Stress test with jmeter and Eureka test configurations

--- a/microservice-ms/service-user/src/main/resources/service-user.yml
+++ b/microservice-ms/service-user/src/main/resources/service-user.yml
@@ -1,8 +1,9 @@
 #APP Security Token
 app:
+  serviceName: ${spring.application.name}
   token:
     url: http://localhost:8080/auth/oauth/check_token
-    enable: false
+    enable: true
     tokenfield: token
     PathPatterns: /**
      
