--- a/microservice-ms/service-eureka/src/main/resources/service-eureka.yml
+++ b/microservice-ms/service-eureka/src/main/resources/service-eureka.yml
@@ -4,14 +4,17 @@ spring:
   profiles: default
   thymeleaf:
     enabled: false  
-     
-server:
-  port: 1111 
-    
 
+server:
+  port: 1111
+  connection-timeout: 1000000
+  compression:
+    enabled: true 
+    
 
 eureka:
   instance:
+    #non-secure-port: 0
     #preferIpAddress: true
     hostname: localhost
   server:
