--- a/microservice-ms/service-user/pom.xml
+++ b/microservice-ms/service-user/pom.xml
@@ -77,7 +77,10 @@
 			<artifactId>jersey-servlet</artifactId>
 		</dependency>
 
-
+	<dependency>
+			<groupId>org.hibernate</groupId>
+			<artifactId>hibernate-envers</artifactId>
+		</dependency>
 
 	</dependencies>
 
